# PyneappleUI

./: .gitmodules  pyproject.toml
src/pyneappleui/: appdata.py  canvas_image.py  canvas_plot.py  context_menu_canvas.py  eventfilter.py  pyneapple_ui.py
src/pyneappleui/dialogues/: dlg_prompts.py
src/pyneappleui/menus/: menu_edit.py
